--- a/style.css
+++ b/style.css
@@ -31,29 +31,33 @@ header {
 .nav_bar {
     background-color: #11101b;
     display: flex;
+
 }
 
 .nav_bar ul {
     display: flex;
     list-style: none;
     overflow: auto;
+    
 }
 
 .nav_bar ul li a {
     text-decoration: none;
     display: block;
+    text-align: center;
     color: white;
     font-size: 20px;
     padding: 10px 25px;
     border-radius: 50px;
     transition: 0.2s;
     margin: 0 5px
+   
 }
 
 .nav_bar ul li a:hover {
     color: #11101b;
     background: #fefefe;
-
+    
 
 }
 
@@ -66,7 +70,9 @@ header {
     padding: 10px 48px;
     border-radius: 50px;
     font-size: 18px;
+    text-align: right;
 }
+
 @media only screen and (max-width: 1320px) {
     header {
         padding: 0 50px;
